# azure-functions-rs

./: .all-contributorsrc  .clabot  .dockerignore  .gitignore  .gitmodules  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  _config.yml  azure-pipelines.yml  cargo_func_deploy_research.md  index.html
azure-functions/: Cargo.toml  worker.config.json
azure-functions-codegen/: Cargo.toml
azure-functions-codegen/src/: export.rs  func.rs  lib.rs  register.rs  util.rs
azure-functions-codegen/src/func/: binding.rs  function.rs  invoker.rs  mod.rs  output_bindings.rs  return_value_setter.rs
azure-functions-codegen/src/func/bindings/: blob.rs  blob_trigger.rs  event_grid_trigger.rs  event_hub.rs  event_hub_trigger.rs  http.rs  http_trigger.rs  mod.rs  queue.rs  queue_trigger.rs  table.rs  timer_trigger.rs
azure-functions-codegen/src/main/: mod.rs
azure-functions-durable/: Cargo.toml
azure-functions-durable/src/: client.rs  endpoint.rs  error.rs  lib.rs
azure-functions-sdk/: Cargo.toml
azure-functions-sdk/src/: commands.rs  main.rs  util.rs
azure-functions-sdk/src/commands/: build.rs  deploy.rs  mod.rs  new.rs  new_app.rs  run.rs
azure-functions-sdk/src/commands/new/: activity.rs  blob.rs  cosmos_db.rs  event_grid.rs  event_hub.rs  http.rs  orchestration.rs  queue.rs  service_bus.rs  timer.rs  utils.rs
azure-functions-sdk/src/templates/: Dockerfile.hbs  main.rs.hbs
azure-functions-sdk/src/templates/new/: activity.rs.hbs  blob.rs.hbs  cosmosdb.rs.hbs  eventgrid.rs.hbs  eventhub.rs.hbs  http.rs.hbs  orchestration.rs.hbs  queue.rs.hbs  servicebus.rs.hbs  timer.rs.hbs
azure-functions-sdk/src/templates/new-app/: Dockerfile.hbs  appsettings.json.hbs  dockerignore.hbs  functions_mod.rs.hbs  host.json.hbs  launch.json.hbs  local.settings.json.hbs  main.rs.hbs
azure-functions-shared/: Cargo.toml  build.rs
azure-functions-shared-codegen/: Cargo.toml
azure-functions-shared-codegen/src/: binding.rs  generated_mod.rs  lib.rs
azure-functions-shared/cache/: ClaimsIdentityRpc.rs  FunctionRpc.rs  FunctionRpc_grpc.rs  README.md  azure_functions_rpc_messages.rs
azure-functions-shared/src/: codegen.rs  context.rs  lib.rs  util.rs
azure-functions-shared/src/codegen/: attribute_arguments.rs  binding.rs  bindings.rs  function.rs  quotable.rs  value.rs
azure-functions-shared/src/codegen/bindings/: activity_trigger.rs  blob.rs  blob_trigger.rs  cosmos_db.rs  cosmos_db_trigger.rs  durable_client.rs  entity_trigger.rs  event_grid_trigger.rs  event_hub.rs  event_hub_trigger.rs  generic.rs  http.rs  http_trigger.rs  mod.rs  orchestration_client.rs  orchestration_trigger.rs  queue.rs  queue_trigger.rs  send_grid.rs  service_bus.rs  service_bus_trigger.rs  signalr.rs  signalr_connection_info.rs  table.rs  timer_trigger.rs  twilio_sms.rs
azure-functions/src/: backtrace.rs  bindings.rs  cli.rs  commands.rs  context.rs  durable.rs  event_hub.rs  generic.rs  http.rs  lib.rs  logger.rs  registry.rs  send_grid.rs  signalr.rs  timer.rs  util.rs  worker.rs
azure-functions/src/bindings/: blob.rs  blob_trigger.rs  cosmos_db_document.rs  cosmos_db_documents.rs  cosmos_db_trigger.rs  durable_activity_context.rs  durable_entity_context.rs  durable_orchestration_client.rs  durable_orchestration_context.rs  event_grid_event.rs  event_hub_message.rs  event_hub_trigger.rs  generic_input.rs  generic_output.rs  generic_trigger.rs  http_request.rs  http_response.rs  mod.rs  queue_message.rs  queue_trigger.rs  send_grid_message.rs  service_bus_message.rs  service_bus_trigger.rs  signalr_connection_info.rs  signalr_group_action.rs  signalr_message.rs  table.rs  timer_info.rs  twilio_sms_message.rs
azure-functions/src/blob/: contents.rs  mod.rs  properties.rs
azure-functions/src/commands/: init.rs  run.rs  sync_extensions.rs
azure-functions/src/durable/: action_future.rs  actions.rs  activity_output.rs  creation_urls.rs  entity_state.rs  history.rs  http_request.rs  http_response.rs  join_all.rs  management_urls.rs  orchestration_output.rs  orchestration_state.rs  select_all.rs
azure-functions/src/event_hub/: partition_context.rs  runtime_information.rs  system_properties.rs
azure-functions/src/http/: body.rs  cookie.rs  mod.rs  response_builder.rs  status.rs
azure-functions/src/queue/: message_body.rs  mod.rs
azure-functions/src/rpc/: client.rs  mod.rs
azure-functions/src/send_grid/: attachment.rs  bcc_settings.rs  bypass_list_management.rs  click_tracking.rs  content.rs  email_address.rs  footer_settings.rs  google_analytics.rs  mail_settings.rs  message_builder.rs  open_tracking.rs  personalization.rs  sandbox_mode.rs  spam_check.rs  subscription_tracking.rs  tracking_settings.rs  unsubscribe_group.rs
azure-functions/src/timer/: schedule_status.rs
examples/durable-functions/: Cargo.toml  README.md  local.settings.json
examples/durable-functions/src/: main.rs
examples/durable-functions/src/functions/: call_hello_world.rs  call_join.rs  counter.rs  counter_orchestration.rs  hello_world.rs  join.rs  looping.rs  mod.rs  raise_event.rs  say_hello.rs  select.rs  start.rs  start_looping.rs  timer.rs  wait_for_event.rs
examples/http/: Cargo.toml  Dockerfile  README.md  local.settings.json
examples/http/src/: greet.rs  greet_with_json.rs  main.rs
examples/http/src/functions/: greet.rs  greet_async.rs  greet_with_json.rs  mod.rs
examples/signalr/: Cargo.toml  README.md
examples/signalr/src/: main.rs  serialization.rs
examples/signalr/src/functions/: add_to_group.rs  mod.rs  negotiate.rs  remove_from_group.rs  send_message.rs
examples/table/: Cargo.toml  Dockerfile  README.md
examples/table/src/: main.rs  read_row.rs
examples/table/src/functions/: create_row.rs  mod.rs  (+2 more)
lib/: Cargo.toml  build.rs
lib/src/: cli.rs  context.rs  lib.rs  logger.rs  registry.rs
lib/src/bindings/: http_request.rs  http_response.rs  mod.rs  timer_info.rs
lib/src/codegen/: binding.rs  function.rs  mod.rs
lib/src/http/: body.rs  mod.rs  response_builder.rs  status.rs
lib/src/rpc/: client.rs  mod.rs  protocol.rs
lib/src/timer/: mod.rs
(+184 files in other folders)
