[workspace]

members = [
    "azure-functions",
    "azure-functions-codegen",
    "azure-functions-durable",
    "azure-functions-sdk",
    "azure-functions-shared",
    "azure-functions-shared-codegen",
    "examples/http",
    "examples/timer",
    "examples/queue",
    "examples/blob",
    "examples/table",
    "examples/event-grid",
    "examples/event-hub",
    "examples/cosmosdb",
    "examples/signalr",
    "examples/service-bus",
    "examples/twilio",
    "examples/sendgrid",
    "examples/generic",
    "examples/durable-functions",
]
