[package]
name = "azure-functions-codegen"
license = "MIT"
version = "0.5.2"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust code generation support"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
azure-functions-shared = { version = "0.5.2", path = "../azure-functions-shared" }
quote = "0.6.11"
syn = { version = "0.15.27", features = ["full"] }
proc-macro2 = { version = "0.4.27" }

[features]
unstable = ["azure-functions-shared/unstable"]
