[package]
name = "azure-functions-codegen"
license = "MIT"
version = "0.7.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust code generation support"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
azure-functions-shared = { version = "0.7.0", path = "../azure-functions-shared" }
quote = "0.6.12"
syn = { version = "0.15.32", features = ["full"] }
proc-macro2 = { version = "0.4.27" }

[features]
unstable = ["azure-functions-shared/unstable"]
