[package]
name = "azure-functions-codegen"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust code generation support"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
azure-functions-shared = { version = "0.10.0", path = "../azure-functions-shared" }
quote = "0.6.13"
syn = { version = "1.0.1", features = ["full"] }
proc-macro2 = { version = "0.4.30" }

[features]
unstable = ["azure-functions-shared/unstable"]
