[package]
name = "azure-functions-durable"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Durable Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
hyper = "0.12.33"
serde = { version="1.0.97", features = ["derive"] }
serde_json = "1.0.40"
tokio = "0.1.22"
tokio-threadpool = "0.1.15"
derive_builder = "0.7.2"
chrono = { version = "0.4", features = ["serde"] }
url = "1.7.2"
log = "0.4.7"

[dev-dependencies]
mockito = "0.19.0"
tokio-core = "0.1.17"