[package]
name = "azure-functions-durable"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Durable Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
bytes = "0.5.4"
futures = "0.3.1"
hyper = { version = "0.13.1", features = ["stream"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.50"
tokio = { version = "0.2.10", default-features = false, features = [] }
chrono = { version = "0.4.10", features = ["serde"] }
url = "2.1.0"
log = "0.4.7"

[dev-dependencies]
mockito = "0.22.0"
