[package]
name = "azure-functions-sdk"
license = "MIT"
version = "0.8.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust Developer Tools"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[[bin]]
name = "cargo-func"
path = "src/main.rs"

[dependencies]
colored = "1.8"
clap = "2.33.0"
atty = "0.2.11"
handlebars = "1.1.0"
serde_json = "1.0.39"
tempdir = "0.3.7"
regex = "1.1.6"
syn = { version = "0.15.34", features = ["full", "extra-traits"] }
lazy_static = "1.3.0"