[package]
name = "azure-functions-sdk"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust Developer Tools"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[[bin]]
name = "cargo-func"
path = "src/main.rs"

[dependencies]
colored = "1.8"
clap = "2.33.0"
atty = "0.2.13"
handlebars = "2.0.1"
serde_json = "1.0.40"
tempdir = "0.3.7"
regex = "1.2.1"
syn = { version = "0.15.44", features = ["full", "extra-traits"] }
lazy_static = "1.4.0"