[package]
name = "azure-functions-sdk"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust Developer Tools"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[[bin]]
name = "cargo-func"
path = "src/main.rs"

[dependencies]
colored = "1.9"
clap = "2.33.0"
atty = "0.2.13"
handlebars = "2.0.2"
serde_json = "1.0.41"
tempdir = "0.3.7"
regex = "1.3.1"
syn = { version = "1.0.9", features = ["full", "extra-traits"] }
lazy_static = "1.3.0"
ctrlc = "3.1.3"
