[package]
name = "azure-functions-shared-codegen"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust shared code generation support."
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
syn = { version = "0.15.44", features = ["full"] }
proc-macro2 = { version = "0.4.30" }

[features]
unstable = []