[package]
name = "azure-functions-shared-codegen"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust shared code generation support."
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.9", features = ["full"] }
proc-macro2 = { version = "1.0.6" }

[features]
unstable = []