[package]
name = "azure-functions-shared"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Implementations shared between the azure-functions-codegen and azure-functions crates."
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared-codegen = { version = "0.10.0", path = "../azure-functions-shared-codegen" }
tonic = "0.1.0-alpha.3"
prost = "0.5"
prost-types = "0.5"
bytes = "0.4"
serde = {version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
serde_derive = "1.0.101"
quote = "0.6.13"
syn = { version = "0.15.44", features = ["full"] }
proc-macro2 = { version = "0.4.30" }
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.1.0-alpha.3"

[features]
default = []
compile_protobufs = []
unstable = ["azure-functions-shared-codegen/unstable"]
