[package]
name = "azure-functions-shared"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Implementations shared between the azure-functions-codegen and azure-functions crates."
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared-codegen = { version = "0.10.0", path = "../azure-functions-shared-codegen" }
tower-grpc = "0.1.1"
prost = "0.5"
prost-types = "0.5"
bytes = "0.4"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
quote = "1.0.2"
syn = { version = "1.0.7", features = ["full"] }
proc-macro2 = { version = "1.0.6" }
lazy_static = "1.4.0"

[build-dependencies]
tower-grpc-build = "0.1.0"

[features]
default = []
compile_protobufs = []
unstable = ["azure-functions-shared-codegen/unstable"]
