[package]
name = "azure-functions-shared"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Implementations shared between the azure-functions-codegen and azure-functions crates."
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared-codegen = { version = "0.11.0", path = "../azure-functions-shared-codegen" }
tonic = "0.1.0-alpha.6"
prost = "0.5"
prost-types = "0.5"
bytes = "0.5"
serde = {version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
quote = "1.0.2"
syn = { version = "1.0.11", features = ["full"] }
proc-macro2 = { version = "1.0.6" }
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.1.0-alpha.6"

[features]
default = []
compile_protobufs = []
unstable = ["azure-functions-shared-codegen/unstable"]
