[package]
name = "azure-functions"
license = "MIT"
version = "0.10.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared = { version = "0.10.0", path = "../azure-functions-shared" }
azure-functions-codegen = { version = "0.10.0", path = "../azure-functions-codegen" }
http = "0.1"
tower-hyper = "0.1.0"
tower-grpc = "0.1.0"
tower-service = "0.2.0"
tower-util = "0.1.0"
tower-request-modifier = "0.1.0"
log = { version = "0.4.8", features = ["std"] }
futures01 = { package = "futures", version = "0.1.28" }
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"], optional = true }
clap = "2.33.0"
tokio = "0.1.22"
tokio-threadpool = "0.1.15"
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
chrono = { version = "0.4.7", features = ["serde"] }
xml-rs = "0.8.0"
lazy_static = "1.3.0"
tempfile = "3.1.0"
ctrlc = "3.1.3"
backtrace = "0.3.33"
fs_extra = "1.1.0"
semver = "0.9.0"

[features]
unstable = ["azure-functions-codegen/unstable", "azure-functions-shared/unstable", "futures-preview"]

[dev-dependencies]
matches = "0.1.8"
