[package]
name = "azure-functions"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared = { version = "0.11.0", path = "../azure-functions-shared" }
azure-functions-codegen = { version = "0.11.0", path = "../azure-functions-codegen" }
azure-functions-durable = { version = "0.11.0", path = "../azure-functions-durable" }
http = "0.1"
tonic = "0.1.0-alpha.6"
log = { version = "0.4.8", features = ["std"] }
futures-preview = "0.3.0-alpha.19"
clap = "2.33.0"
tokio = "0.2.0-alpha.6"
tokio-executor = "0.2.0-alpha.6"
serde = {version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_repr = "0.1.5"
chrono = { version = "0.4.9", features = ["serde"] }
xml-rs = "0.8.0"
lazy_static = "1.4.0"
tempfile = "3.1.0"
ctrlc = "3.1.3"
backtrace = "0.3.39"
fs_extra = "1.1.0"
semver = "0.9.0"
sha1 = "0.6.0"
uuid = { version = "0.8.1", features = ["v5"] }
prost-types = "0.5"

[features]
unstable = ["azure-functions-codegen/unstable", "azure-functions-shared/unstable"]

[dev-dependencies]
matches = "0.1.8"
