[package]
name = "azure-functions"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared = { version = "0.11.0", path = "../azure-functions-shared" }
azure-functions-codegen = { version = "0.11.0", path = "../azure-functions-codegen" }
azure-functions-durable = { version = "0.11.0", path = "../azure-functions-durable" }
http = "0.2.0"
tonic = "0.1.1"
log = { version = "0.4.8", features = ["std"] }
futures = "0.3.1"
pin-project = "0.4.8"
clap = "2.33.0"
tokio = { version = "0.2.20", default-features = false, features = ["blocking", "rt-threaded"] }
serde = {version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_repr = "0.1.5"
chrono = { version = "0.4.10", features = ["serde"] }
xml-rs = "0.8.0"
lazy_static = "1.4.0"
tempfile = "3.1.0"
ctrlc = "3.1.3"
backtrace = "0.3.39"
fs_extra = "1.1.0"
semver = "0.9.0"
sha1 = "0.6.0"
uuid = { version = "0.8.1", features = ["v5"] }
prost-types = "0.6.1"

[features]
unstable = ["azure-functions-codegen/unstable", "azure-functions-shared/unstable"]

[dev-dependencies]
matches = "0.1.8"
