[package]
name = "azure-functions"
license = "MIT"
version = "0.1.4"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Support for writing Azure Functions in Rust."
repository = "https://github.com/peterhuene/azure-functions-rs/"

[dependencies]
azure-functions-codegen = { version = "0.1.3", path = "../codegen" }
log = "0.4.2"
grpcio = "0.3.0"
protobuf = "2.0.0"
futures = "0.1.16"
clap = "2.31.2"
tokio-threadpool = "0.1.3"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
chrono = { version = "0.4.4", features = ["serde"] }

[build-dependencies]
protoc-grpcio = "0.2.0"
reqwest = "0.8.6"

[features]
default = []
cached_protobufs = []

[package.metadata.docs.rs]
features = ["cached_protobufs"]