[package]
name = "durable-functions-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
log = "0.4.6"
futures-preview = "0.3.0-alpha.19"
serde_json = "1.0.40"
chrono = { version = "0.4.10" }

[features]
unstable = ["azure-functions/unstable"]
