[package]
name = "http-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
log = "0.4.8"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
futures-preview = { version = "0.3.0-alpha.17", optional = true }

[features]
unstable = ["azure-functions/unstable", "futures-preview"]
