[package]
name = "http-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
log = "0.4.8"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
futures-preview = { version = "0.3.0-alpha.19", optional = true }

[features]
unstable = ["azure-functions/unstable", "futures-preview"]
