[package]
name = "signalr-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
serde_json = "1.0.40"
serde = "1.0.99"
serde_derive = "1.0.98"

[features]
unstable = ["azure-functions/unstable"]
