[package]
name = "signalr-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
serde_json = "1.0.41"
serde = "1.0.102"
serde_derive = "1.0.102"

[features]
unstable = ["azure-functions/unstable"]
