[package]
name = "signalr-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
serde_json = "1.0.42"
serde = {version = "1.0.103", features = ["derive"] }

[features]
unstable = ["azure-functions/unstable"]
