[package]
name = "table-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
azure_sdk_storage_core = "0.30.0"
azure_sdk_storage_table = "0.30.2"
futures = "0.3.1"
log = "0.4.8"
regex = "1.3.1"
serde_json = "1.0.44"

[features]
unstable = ["azure-functions/unstable"]
