[package]
name = "table-example"
version = "0.1.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
edition = "2018"

[dependencies]
azure-functions = { path = "../../azure-functions" }
# Disable the azure-sdk feature until the Azure SDK updates its dependencies
#azure_sdk_storage_core = { version = "0.35.1", optional = true }
#azure_sdk_storage_table = { version = "0.30.2", optional = true }
futures = "0.3.1"
log = "0.4.8"
regex = "1.3.1"
serde_json = "1.0.44"

[features]
unstable = ["azure-functions/unstable"]
#azure-sdk = ["azure_sdk_storage_core", "azure_sdk_storage_table"]
